# imvr

./: .dockerignore  .gitignore  .gitmodules  LICENSE  README.md  compose.yaml  compose_base.yaml  download.sh  pyproject.toml  requirements.txt
docker/: Dockerfile  build.sh  nvidia_icd.json  user_entrypoint.sh
vr_teleop/: __init__.py  example.sh  tele.py  tools.py
vr_teleop/configs/: config.py
vr_teleop/configs/agents/floating_ability_hand/: ik_left.yaml  ik_right.yaml  retargeting_left.yaml  retargeting_right.yaml  tele_right.yaml  tele_right_rel.yaml
vr_teleop/configs/agents/panda/: ik_right.yaml  tele_keyboard_right.yaml  tele_right.yaml  tele_right_rel.yaml
vr_teleop/configs/agents/panda_stick/: ik_right.yaml  tele_keyboard_right.yaml  tele_right.yaml
vr_teleop/configs/agents/xarm6/: ik_right.yaml  tele_keyboard_right.yaml  tele_right.yaml
vr_teleop/configs/examples/maniskill_floating_ability/: insert_flower.yaml
vr_teleop/configs/examples/maniskill_panda/: peg_insertion_side.yaml  pick_cube.yaml  place_sphere.yaml  plug_charger.yaml  pull_cube_tool.yaml  push_cube.yaml
vr_teleop/configs/examples/maniskill_panda_stick/: push_t.yaml
vr_teleop/configs/examples/maniskill_xarm6/: assembling_kits.yaml  lift_peg_upright.yaml  poke_cube.yaml  stack_cube.yaml
vr_teleop/envs/: __init__.py  base_env.py
vr_teleop/envs/maniskill/: __init__.py  maniskill_env.py
vr_teleop/envs/utils/: pose.py  tree_utils.py  urdf_loader.py
vr_teleop/modules/: teleconfig.py
vr_teleop/modules/ik/: __init__.py  ik_solver.py  projected_ik.py  visualizer.py
vr_teleop/modules/retargeting/: __init__.py  optimizer.py  retargeting.py  robot_wrapper.py  visualizer.py
vr_teleop/modules/tele/: __init__.py  base_tele.py  keyboard_gripper.py  tele_flags.py  teleconfig.py  vr_gripper.py  vr_gripper_rel.py  vr_hand.py  vr_hand_rel.py
vr_teleop/modules/vr/: __init__.py  initialize.py  sapien_configs.json  vr_base.py  vr_hand_viewer.py  vr_viewer.py
